@@ -31,6 +31,17 @@ New in SVN
         representable using an Int64, or asDouble() combined with minInt64 and
         maxInt64 to figure out whether it is approximately representable.
 
+* Value
+  - Patch #3393345: BOOST_FOREACH compatibility. Made Json::iterator more 
+    standard compliant, added missing iterator_category and value_type 
+	typedefs (contribued by Robert A. Iannucci).
+		
+* Compilation
+
+  - Patch #3474563: added missing JSON_API on some classes causing link issues
+    when building as a dynamic library on Windows 
+	(contributed by Francis Bolduc).
+		
 * Bug fixes
   - Patch #3539678: Copy constructor does not initialize allocated_ for stringValue
     (contributed by rmongia).
